<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="fragments.android.exemple.com.logregfragments.ChangepassFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:layout_marginTop="10sp"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/chpassTitle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/chpassTitle"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            tools:ignore="ScrollViewSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chpassInstruction"
                android:text="@string/chpass_instructions"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorSecondaryText"
                android:gravity="center"
                android:onClick="forgotPass"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chpassSubtitleEmail"
                android:text="@string/change_code"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:cursorVisible="true"
                android:textSize="20sp"
                android:padding="5dp"
                android:background="@android:color/white"
                android:id="@+id/chpassEditCode"
                android:hint="@string/hint_code"
                android:layout_marginBottom="20dp"
                android:elevation="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chpassSubtitlePassword"
                android:text="@string/password"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:cursorVisible="true"
                android:textSize="20sp"
                android:padding="5dp"
                android:background="@android:color/white"
                android:id="@+id/chpassEditPasword"
                android:hint="@string/hint_password"
                android:layout_marginBottom="20dp"
                android:elevation="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chpassSubtitleRPassword"
                android:text="@string/repeat_password"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:textSize="20sp"
                android:padding="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_repeat_password"
                android:id="@+id/chpassEditRPassword"
                android:layout_marginBottom="20dp"
                android:elevation="2dp"

                />

            <Button
                android:id="@+id/chpassBTN"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

