<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="fragments.android.exemple.com.logregfragments.ForgotFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:layout_marginTop="10sp"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/forgotTitle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/forgotTitle"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            tools:ignore="ScrollViewSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotInstruction"
                android:text="@string/forgot_instructions"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorSecondaryText"
                android:gravity="center"
                android:onClick="forgotPass"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotSubtitleEmail"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:cursorVisible="true"
                android:textSize="20sp"
                android:padding="5dp"
                android:background="@android:color/white"
                android:id="@+id/forgotEditEmail"
                android:hint="@string/hint_email"
                android:layout_marginBottom="20dp"
                />


            <Button
                android:id="@+id/forgotBTN"
                android:text="@string/send_me_reset_instructions"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:onClick="SendMRI"
                />





        </LinearLayout>

    </ScrollView>

</RelativeLayout>
